--- a/generator/generation.html
+++ b/generator/generation.html
@@ -15,28 +15,27 @@
         </header>
         <div class="header_top" id="header_top">
                 <div class="button header_button1" id="button header_button1">
-                    <a href="../project/index.html">Головна</a>
+                    <a href="../index.html">Головна</a>
                 </div>
                 <div class="button header_button2"id="button header_button2">
-                    <a href="">Новини</a>  
+                    <a href="../news/news.html">Новини</a>  
                 </div>
                 <div class="button header_button3" id="button header_button3">
-                    <a href="">Гайди</a>
+                    <a href="../tutorials/tutorials.html">Гайди</a>
                 </div>
                 <div class="button header_button4"id="button header_button4">
-                    <a href="../project/advices/advices.html">Поради</a>  
+                    <a href="../advices/advices.html">Поради</a>  
                 </div>
                 <div class="button header_button5" id="button header_button5">
-                    <a href="">Популярні стріми</a>
+                    <a href="../video/video.html">Популярні стріми</a>
                 </div>
                 <div class="button header_button6"id="button header_button6">
-                    <a href="">Популярні ігри</a>  
+                    <a href="../games/games.html">Популярні ігри</a>  
                 </div>
                 <div class="button header_button7" id="button header_button7">
-                    <a href="../project/generator/generation.html">Генератор ігор</a>
+                    <a href="../generator/generation.html">Генератор ігор</a>
                 </div>
-            </div>      
-             
+            </div>  
     </div>
     <div class="main  wrap" id="main">   
         <div class="content" id="content">
@@ -44,24 +43,26 @@
             <form class="cattalog" method="POST">
                 <div class="game_list" id="game_list1">
                     <p>Платформа</p>
-                    <select  name="select_type_of_game">
+                    <select  name="select_type_of_game" id="s_g_0">
                         <option selected="selected" value="value1">Будь-що</option>
                         <option  value="value2">Windows</option>
                         <option  value="value3">MacOS</option>
+                        <option  value="value4">PS4</option>
+                        <option  value="value5">Xbox</option>
                     </select>
                     </div>
                 <div class="game_list" id="game_list2">
                     <p>Тип гри</p>
-                    <select  name="select_type_of_game">
+                    <select  name="select_type_of_game" id="s_g_1">
                         <option selected="selected" value="value1">Будь-що</option>
                         <option  value="value2">Одиночна</option>
                         <option  value="value3">Кооператив</option>
-                        <option  value="value3">Мультирлеєр</option>
+                        <option  value="value4">Мультирлеєр</option>
                     </select>
                 </div>
                 <div class="game_list"id="game_list3">
                     <p>Тип локацій</p>
-                    <select  name="select_type_of_game">
+                    <select  name="select_type_of_game"  id="s_g_2">
                         <option selected="selected" value="value1">Будь-що</option>
                         <option  value="value2">Відкритий світ</option>
                         <option  value="value3">Лінійність</option>
@@ -69,7 +70,7 @@
                 </div>
                 <div class="game_list">
                     <p>Жанр гри</p>
-                    <select  name="select_type_of_game">
+                    <select  name="select_type_of_game" id="s_g_3">
                         <option selected="selected" value="value1">Будь-що</option>
                         <option  value="value2">Атмосфера</option>
                         <option  value="value3">Виживання</option>
@@ -124,7 +125,7 @@
                 </div>
                 <div class="game_list">
                     <p>Додатковий жанр</p>
-                    <select  name="select_type_of_game">
+                    <select  name="select_type_of_game" id="s_g_4">
                         <option selected="selected" value="value1">Будь-що</option>
                         <option  value="value2">Атмосфера</option>
                         <option  value="value3">Виживання</option>
@@ -179,7 +180,7 @@
                 </div>
                 <div class="game_list">
                     <p>Додатковий жанр</p>
-                    <select  name="select_type_of_game">
+                    <select  name="select_type_of_game" id="s_g_5">
                         <option selected="selected" value="value1">Будь-що</option>
                         <option  value="value2">Атмосфера</option>
                         <option  value="value3">Виживання</option>
@@ -234,7 +235,7 @@
                 </div>
                 <div class="game_list">
                     <p>Додатковий жанр</p>
-                    <select  name="select_type_of_game">
+                    <select  name="select_type_of_game" id="s_g_6">
                         <option selected="selected" value="value1">Будь-що</option>
                         <option  value="value2">Атмосфера</option>
                         <option  value="value3">Виживання</option>
@@ -289,7 +290,7 @@
                 </div>
                 <div class="game_list">
                     <p>Додатковий жанр</p>
-                    <select  name="select_type_of_game">
+                    <select  name="select_type_of_game" id="s_g_7">
                         <option selected="selected" value="value1">Будь-що</option>
                         <option  value="value2">Атмосфера</option>
                         <option  value="value3">Виживання</option>
@@ -344,7 +345,7 @@
                 </div>
                 <div class="game_list">
                     <p>Додатковий жанр</p>
-                    <select  name="select_type_of_game">
+                    <select  name="select_type_of_game" id="s_g_8">
                         <option selected="selected" value="value1">Будь-що</option>
                         <option  value="value2">Атмосфера</option>
                         <option  value="value3">Виживання</option>
@@ -399,7 +400,7 @@
                 </div>
                 <div class="game_list">
                     <p>Додатковий жанр</p>
-                    <select  name="select_type_of_game">
+                    <select  name="select_type_of_game" id="s_g_9">
                         <option selected="selected" value="value1">Будь-що</option>
                         <option  value="value2">Атмосфера</option>
                         <option  value="value3">Виживання</option>
@@ -454,7 +455,7 @@
                 </div>
                 <div class="game_list">
                     <p>Додатковий жанр</p>
-                    <select  name="select_type_of_game">
+                    <select  name="select_type_of_game" id="s_g_10">
                         <option selected="selected" value="value1">Будь-що</option>
                         <option  value="value2">Атмосфера</option>
                         <option  value="value3">Виживання</option>
@@ -508,9 +509,10 @@
                     </select>
                 </div>
                 <div class="game_list">
-                        <input type="button" value="Готово" name="submit_game" id="submit_game">
+                        <input type="button" value="Готово" name="submit_game" id="submit_game" onclick="found()">
                 </div>
-
+                <script src="../js/generator_game.js" >
+                </script>
             </form>
             </div>
         </div>          
@@ -547,7 +549,7 @@
                 <img src="../image/logo12.png" alt>
         </i>
         <div class="button footer_button1" id="button footer_button1">
-            <a href="">Зворотній зв'язок</a>
+            <a href="../comunication/comunication.html">Зворотній зв'язок</a>
         </div>
         <div class="icon" id="icon">
             <i class="icon icon_facebook" id="icon icon_facebook">
@@ -571,12 +573,10 @@
                 </a>
             </i>
         </div>
-        <p>Всі дані на сайті представлені вичключно для ознайомлення.<br>
+        <p>Всі дані представлені вичключно для ознайомлення.<br>
             Усі права захищені.
         @ 2021</p>        
-    </div>                           
-
-
+    </div>  
     </div>
 </div>
 </body>
