--- a/advices/advices.html
+++ b/advices/advices.html
@@ -51,7 +51,7 @@
                         <img src="dota/dota_logo.png" alt="">
                     </a>
                     </td>
-                    <td><a href="">
+                    <td><a href="cs_go/cs_go.html">
                             <div class="advices_info" id="advices_info">
                                 <p><span>Counter-Strike: Global Offensive</span>
                             </p></div>
@@ -129,31 +129,31 @@
             </div>
         </div>          
         <div class="news_line" id="news_line">
-                <div class="first_news">
-                    <a href="">
-                  <img src="../newsline/image/1.jpg"  alt>
-                  <div class="first_news_text" >
-             <embed src="../newsline/first_news_text.html" height="342px"  width="240px" position="absolute" >
-                   </div>
-               </a>
-                   </div>
-               <div class="second_news">
-                       <a href="">
-                     <img src="../newsline/image/2.jpg"  alt>
-                     <div class="second_news_text" >
-                       <embed src="../newsline/second_news_text.html" height="342px"  width="240px" position="absolute" >
-                      </div>
-                  </a>
+            <div class="first_news">
+                <a href="../newsline/1/1.html">
+              <img src="../newsline/image/1.jpg"  alt>
+              <div class="first_news_text" >
+         <embed src="../newsline/first_news_text.html" height="342px"  width="240px" position="absolute" >
+               </div>
+           </a>
+               </div>
+           <div class="second_news">
+            <a href="../newsline/2/2.html">
+                 <img src="../newsline/image/2.jpg"  alt>
+                 <div class="second_news_text" >
+                   <embed src="../newsline/second_news_text.html" height="342px"  width="240px" position="absolute" >
                   </div>
-               <div class="third_news">
-                   <a href="">
-                     <img src="../newsline/image/3.jpg"  alt>
-                     <div class="third_news_text" >
-                       <embed src="../newsline/third_news_text.html" height="342px"  width="240px" position="absolute" >
-                      </div>
-                   </a>
-                   </div>
-           </div>
+              </a>
+              </div>
+           <div class="third_news">
+               <a href="../newsline/3/3.html">
+                 <img src="../newsline/image/3.jpg"  alt>
+                 <div class="third_news_text" >
+                   <embed src="../newsline/third_news_text.html" height="342px"  width="240px" position="absolute" >
+                  </div>
+               </a>
+               </div>
+       </div>
     </div>
      
     <div class="footer wrap" id="footer">
